# HummingDiscordBot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.template.yml
resources/: test_trades.csv
resources/balance_chart/: package.json  pnpm-lock.yaml
resources/balance_chart/src/: chart.js  index.html  main.styl
src/: args.rs  config.rs  main.rs  tests.rs
src/backend_api/: client.rs  mod.rs  objects.rs
src/structs/: bot.rs  bot_balance.rs  bot_cache.rs  jsonl_cache.rs  mod.rs  profit_chart.rs  trade.rs
src/structs/extensions/: converter.rs  mod.rs  profit_chart_renderer.rs  trade_csv_parser.rs
src/utils/: beautify_bot_name.rs  extract_bot_name.rs  mod.rs  unix_timestamp.rs
