[package]
name = "MDHBot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.4", features = ["derive"] }
debounced = "0.1.0"
env_logger = "0.11.3"
futures = "0.3.30"
log = "0.4.21"
headless_chrome = { version = "1.0.9" }
notify = "6.1.1"
notify-debouncer-mini = "0.4.1"
poise = "0.6.1"
postcard = { version = "1.0.8", features = ["alloc"] }
rust_decimal = "1.35.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.116"
serde_yaml = "0.9.34"
strum = { version = "0.26.2", features = ["derive"] }
tiny_http = "0.12.0"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread"] }
urlencoding = "2.1.3"

[features]
fetch_chrome = ["headless_chrome/fetch"]
