[package]
name = "MDHBot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.18", features = ["derive"] }
env_logger = "0.11.5"
futures = "0.3.30"
log = "0.4.22"
headless_chrome = { version = "1.0.15" }
poise = "0.6.1"
postcard = { version = "1.0.10", features = ["alloc"] }
rust_decimal = "1.36.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde_yaml = "0.9.34"
strum = { version = "0.26.3", features = ["derive"] }
tiny_http = "0.12.0"
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread"] }
urlencoding = "2.1.3"
url = "2.5.2"
reqwest = { version = "0.12.7", features = ["json"] }
test-log = "0.2.16"
rust_decimal_macros = "1.36.0"
tokio-cron-scheduler = "0.13.0"
regex = "1.11.0"
lazy_static = "1.5.0"
openssl = { version = "0.10.66", features = ["vendored"] }
memmap2 = "0.9.5"

[features]
fetch_chrome = ["headless_chrome/fetch"]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
debug = false
